[gd_scene load_steps=2 format=3 uid="uid://cjq6dc78rwweq"]

[ext_resource type="Script" uid="uid://chtxhku2kfay" path="res://main.gd" id="1"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "AprilTag Detection System"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="StartButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "Start Camera"

[node name="StopButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "Stop Camera"

[node name="VideoToggleButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "Enable Video"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="VideoContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VideoRect" type="TextureRect" parent="VBoxContainer/VideoContainer"]
layout_mode = 2
size_flags_horizontal = 3
expand_mode = 1
stretch_mode = 5

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/VideoContainer"]
layout_mode = 2

[node name="DetectionLabel" type="RichTextLabel" parent="VBoxContainer/VideoContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/mono_font_size = 12
theme_override_font_sizes/normal_font_size = 14
bbcode_enabled = true
text = "Initializing..."
fit_content = true
scroll_active = false
